force-app/main/default/objects/Account_Contract_Archive_Junction__c/Account_Contract_Archive_Junction__c.object-meta.xml
<CustomObject>
    <description>Account Contract Archive Junction Relationship</description>
    <label>Account Contract Archive Junction</label>
    <nameField>
        <displayFormat>AC-{00000}</displayFormat>
        <label>Account Contract Archive Junction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Contract Archive Junctions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>