force-app/main/default/objects/Account_Contract_Archive_Junction__c/fields/Account_Contract_Archive_Junction_Sys_Id__c.field-meta.xml
<CustomField>
    <fullName>Account_Contract_Archive_Junction_Sys_Id__c</fullName>
    <externalId>true</externalId>
    <label>Account Contract Archive Junction Sys Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>