force-app/main/default/objects/Account_Contract_Archive_Junction__c/fields/Contract_Archive__c.field-meta.xml
<CustomField>
    <fullName>Contract_Archive__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Contract Archive</label>
    <referenceTo>Contract_Archive__c</referenceTo>
    <relationshipLabel>Account Contract Archive Junctions</relationshipLabel>
    <relationshipName>Account_Contract_Archive_Junctions</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>