force-app/main/default/objects/Account_Contract_Archive_Junction__c/fields/Contract_Name__c.field-meta.xml
<CustomField>
    <fullName>Contract_Name__c</fullName>
    <description>Used for lookup field in flow &quot;report contract problem&quot;</description>
    <formula>Contract_Archive__r.Name &amp; &apos; - &apos; &amp;  Contract_Archive__r.Internal_Contract_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Name</label>
    <type>Text</type>
</CustomField>