force-app/main/default/objects/Account_Contract_Archive_Junction__c/fields/Contract_State__c.field-meta.xml
<CustomField>
    <fullName>Contract_State__c</fullName>
    <description>Used for lookup field in flow &quot;report contract problem&quot;</description>
    <formula>Contract_Archive__r.Contract_State__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract State</label>
    <type>Text</type>
</CustomField>