force-app/main/default/objects/Account_Contract_Archive_Junction__c/fields/FinalExpirationConfirmed__c.field-meta.xml
<CustomField>
    <fullName>FinalExpirationConfirmed__c</fullName>
    <formula>Contract_Archive__r.FinalExpirationConfirmed__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FinalExpirationConfirmed</label>
    <type>Checkbox</type>
</CustomField>