force-app/main/default/objects/Account_Contract_Archive_Junction__c/fields/Internal_Contract_Number__c.field-meta.xml
<CustomField>
    <fullName>Internal_Contract_Number__c</fullName>
    <label>Internal Contract Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>