force-app/main/default/objects/Account_Contract_Archive_Junction__c/fields/LegalOwnerCountry__c.field-meta.xml
<CustomField>
    <fullName>LegalOwnerCountry__c</fullName>
    <formula>Contract_Archive__r.LegalOwnerCountry__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LegalOwnerCountry</label>
    <type>Text</type>
</CustomField>